--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri-build = { version = "1.1", features = [] }
 serde_json = "1.0"
 whoami = "1.2.3"
 sqlite = "0.30.3"
+execute = "0.2.11"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
 
