--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.1.0"
+    "@tauri-apps/api": "^1.1.0",
+    "svelte-simple-modal": "^1.4.5"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@tauri-apps/cli": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/node": "^18.7.10",
+    "prisma": "^4.7.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.2",
-    "@tauri-apps/cli": "^1.1.0"
+    "vite": "^3.0.2"
   }
 }
