added stuff to cargo.toml

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "pbpl"
-version = "0.0.0"
-description = "A Tauri App"
+version = "0.1.0"
+description = "Unify your game sources in one place by using modules made by the community. "
 authors = ["you"]
-license = ""
-repository = ""
+license = "BSD-3-Clause"
+repository = "https://github.com/ProjectBlackPearl/pbpl"
 edition = "2021"
 rust-version = "1.57"
 
