--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ rfd = "0.10.0"
 sqlite = "0.30.3"
 execute = "0.2.11"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["api-all"] }
+tauri = { version = "1.1", features = ["api-all", "system-tray"] }
 
 
 [features]
