--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,19 +13,25 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
-      - name: setup node
+      - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: install rust stable
+      - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
-      - name: install deps (ubuntu only)
+      - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install app dependencies and build
-        run: npm install && npm run tauri build
-      - uses: tauri-apps/tauri-action@v0
+      - name: Install app dependencies and build
+        run: |
+          npm install
+          npm run tauri build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Compiled-Files
+          path: src-tauri/target/release/bundle/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
