--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0"
 rfd = "0.10.0"
 sqlite = "0.30.3"
 execute = "0.2.11"
+reqwest = { version = "0.11.13", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all", "system-tray"] }
 
