--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"@tauri-apps/api": "^1.1.0",
 		"svelte-i18n": "^3.6.0",
-		"svelte-simple-modal": "^1.4.5"
+		"svelte-modals": "^1.2.0"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.1",
@@ -23,6 +23,7 @@
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-simple-modal": "^1.4.5",
 		"tslib": "^2.4.0",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.2"
