--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ execute = "0.2.11"
 reqwest = { version = "0.11.13", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all", "system-tray"] }
+uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 
 
 [features]
