--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tauri-apps/cli": "^1.1.0",
 		"@tsconfig/svelte": "^3.0.0",
 		"@types/node": "^18.7.10",
+		"sass": "^1.57.1",
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
