--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 rfd = "0.10.0"
-sqlite = "0.30.3"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 execute = "0.2.11"
 reqwest = { version = "0.11.13", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
