Changed it to run on PR's

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -8,8 +8,10 @@
 name: Build Test
 
 on:
-    push:
-        branches: [main]
+    pull_request:
+        types:
+            - opened
+            - reopened
 
 jobs:
     deploy:
