--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-20.04]
+        platform: [windows-latest]
 
     runs-on: ${{ matrix.platform }}
     steps:
