--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -3,51 +3,37 @@
 # - Builds the app as debug to test if it compiles
 #   Runs on ubuntu-latest
 #   Runs the command "yarn tauri build --bundle none"
-#   Runs on every PR to the main branch
+#   Runs on every Push to the main branch
 
-name: Build Test
+name: Push Build Test
 
 on:
-    pull_request:
-        types:
-            - opened
-            - reopened
+    push:
+        branches: [main]
 
 jobs:
-    build:
-        runs-on: ubuntu-20.04
-        steps:
-            - uses: actions/checkout@master
+  test-tauri:
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [windows-latest]
 
-            # Sets up Node
-            - name: Setup Node.js 16.x
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 16.x
-                  
-            # Installs Rust
-            - name: Install Rust stable
-              uses: dtolnay/rust-toolchain@stable
-            
-            # Install Ubuntu deps
-            - name: Install ubuntu deps
-              if: matrix.platform == 'ubuntu-20.04'
-              run: |
-                sudo apt-get update
-                sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-            
-            # Runs "yarn install"
-            - name: Install NPM packages
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: install
-
-            # Runs "yarn build:debug"
-            - name: Build with --debug flag
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: build:debug
-                  
-            - uses: tauri-apps/tauri-action@v0
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
+      - name: install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-20.04'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+      - name: install app dependencies and build it
+        run: yarn && yarn build
+      - uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
