--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "pbpl"
-version = "0.1.0"
+name = "project_black_pearl"
+version = "0.2.0"
 description = "Unify your game sources in one place by using modules made by the community. "
-authors = ["you"]
+authors = ["zun1uwu", "infinity-plus", "Brisolo32", "Contributors of Project Black Pearl"]
 license = "BSD-3-Clause"
 repository = "https://github.com/ProjectBlackPearl/pbpl"
 edition = "2021"
