--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,15 @@ on:
     inputs:
       version:
         description: 'Version to publish'
-        required: true
+        required: false
         default: '0.0.0'
+        type: string
+      channel:
+        description: 'Channel to publish'
+        required: true
+        default: 'stable'
+        options: ['stable', 'beta', 'alpha', 'test']
+        type: string
 
 jobs:
   create-release:
@@ -26,7 +33,10 @@ jobs:
         with:
           node-version: 16
       - name: get version
+      if: github.event.inputs.version == '0.0.0'
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+      else:
+        run: echo "PACKAGE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
       - name: create release
         id: create-release
         uses: actions/github-script@v6
@@ -35,8 +45,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `pbp-v${process.env.PACKAGE_VERSION}`,
-              name: `Project Black Pearl v${process.env.PACKAGE_VERSION}`,
+              tag_name: `pbp-${{ github.event.inputs.version }}-v${process.env.PACKAGE_VERSION}`,
+              name: `Project Black Pearl ${{ github.event.inputs.version }} v${process.env.PACKAGE_VERSION}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
               prerelease: false
