--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,8 +37,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `pbp-${{ github.event.inputs.version }}-v${process.env.PACKAGE_VERSION}`,
-              name: `Project Black Pearl ${{ github.event.inputs.version }} v${process.env.PACKAGE_VERSION}`,
+              tag_name: `pbp-${{ github.event.inputs.channel }}-v${process.env.PACKAGE_VERSION}`,
+              name: `Project Black Pearl ${{ github.event.inputs.channel }} v${process.env.PACKAGE_VERSION}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
               prerelease: false
