workflow: Use prereleases if channel is not stable
Signed-off-by: Harsh Navdhare <harsh.navdhare@proton.me>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
               name: `Project Black Pearl ${{ github.event.inputs.channel }} v${process.env.PACKAGE_VERSION}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
-              prerelease: false
+              prerelease: false if ${{ github.event.inputs.channel }} == 'stable' else true
             })
 
             return data.id
