Starts redesign for the Library page
Still missing
- Styled add btn
- Game info

Also this fixes prettier not working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,9 @@
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
 	"editor.formatOnType": true,
+	"svelte.plugin.svelte.format.enable": true,
 	"[svelte]": {
-		"editor.defaultFormatter": "svelte.svelte-vscode-nightly"
+		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
 	"i18n-ally.localesPaths": ["src/locale/lang"],
 	"i18n-ally.keystyle": "nested"
