--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "project_black_pearl"
+name = "blackpearlorigin"
 version = "0.3.0"
 description = "Unify your game sources in one place by using modules made by the community. "
-authors = ["zun1uwu", "infinity-plus", "Brisolo32", "Contributors of Project Black Pearl"]
+authors = ["zun1uwu", "infinity-plus", "Brisolo32", "Contributors of Black Pearl Origin"]
 license = "BSD-3-Clause"
-repository = "https://github.com/ProjectBlackPearl/project_black_pearl"
+repository = "https://github.com/BlackPearlOrigin/blackpearlorigin"
 edition = "2021"
 rust-version = "1.57"
 
