--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 lazy_static = "1.4.0"
 libloading = "0.8.0"
 anyhow = "1.0.71"
+mlua = { version = "0.8", features = ["lua54", "vendored"] }
 
 
 [features]
