--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,20 +5,7 @@
 # - Publishes the app to GitHub Releases
 
 name: Publish Release
-on:
-  workflow_dispatch:
-    inputs:
-      channel:
-        description: "Channel to publish"
-        required: true
-        default: "stable"
-        options:
-          - "stable"
-          - "beta"
-          - "alpha"
-          - "dev"
-          - "test"
-        type: choice
+on: [workflow_dispatch]
 
 jobs:
   create-release:
@@ -42,11 +29,11 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `bpo-${{ github.event.inputs.channel }}-v${process.env.PACKAGE_VERSION}`,
-              name: `Black Pearl Origin ${{ github.event.inputs.channel }} v${process.env.PACKAGE_VERSION}`,
+              tag_name: `${process.env.PACKAGE_VERSION}`,
+              name: `Release v${process.env.PACKAGE_VERSION}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
-              prerelease: (`${{ github.event.inputs.channel }}` !== "stable")
+              prerelease: false
             })
 
             return data.id
