Added basic logic

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"npm": "^9.6.3",
 		"svelte-i18n": "^3.6.0",
 		"svelte-modals": "^1.2.0",
-		"svelte-navigator": "^3.2.2"
+		"svelte-navigator": "^3.2.2",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.1",
