--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blackpearlorigin"
-version = "1.1.0"
+version = "1.1.1"
 description = "Unify your game sources in one place by using modules made by the community. "
 authors = ["zun1uwu", "infinity-plus", "Brisolo32", "Contributors of Black Pearl Origin"]
 license = "BSD-3-Clause"
@@ -21,7 +21,7 @@ rusqlite_migration = "1.0.1"
 execute = "0.2.11"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["api-all", "macos-private-api", "system-tray"] }
+tauri = { version = "1.2", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 lazy_static = "1.4.0"
 libloading = "0.8.0"
