--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,10 +24,10 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 lazy_static = "1.4.0"
-libloading = "0.8.0"
 anyhow = "1.0.71"
-mlua = { version = "0.8", features = ["lua54", "vendored"] }
 sevenz-rust = { version = "0.2" }
+log = "0.4.20"
+env_logger = "0.10.1"
 
 [features]
 # by default Tauri runs in production mode
