--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ sevenz-rust = { version = "0.2" }
 log = "0.4.20"
 env_logger = "0.10.1"
 rayon = "1.8.0"
+scraper = "0.18.1"
 
 [features]
 # by default Tauri runs in production mode
